PECL2/Parte1/FiboParser.java
// Generated from FiboParser.g4 by ANTLR 4.7.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class FiboParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		COMENTARIO_LINEA=1, COMENTARIO_BLOQUE=2, COMENTARIO_DOCUMENTACION=3, ASIGNAR=4, 
		A_PARENTESIS=5, C_PARENTESIS=6, COMA=7, DOSPUNTOS=8, PUNTOCOMA=9, SALTOLINEA=10, 
		MENOR=11, MAYOR=12, MENORIGUAL=13, MAYORIGUAL=14, IGUAL=15, NOIGUAL=16, 
		BIT_AND=17, AND=18, BIT_OR=19, OR=20, SUMA=21, RESTA=22, MUL=23, DIV=24, 
		INT=25, FLOAT=26, STRING=27, R_STRING=28, R_NUMBER=29, R_VOID=30, INCLUDE=31, 
		IF=32, WHILE=33, FUNCTION=34, BEGIN=35, END=36, END_IF=37, RETURN=38, 
		ELSE=39, FOR=40, IN=41, IDENTIFICADOR=42, WS=43;
	public static final int
		RULE_programa = 0, RULE_return_val = 1, RULE_while_op = 2, RULE_if_op = 3, 
		RULE_else_op = 4, RULE_for_op = 5, RULE_for_eval = 6, RULE_funcionalidad_basica = 7, 
		RULE_asignacion = 8, RULE_libreria = 9, RULE_def_funcion = 10, RULE_def_variable = 11, 
		RULE_funcion = 12, RULE_expr = 13, RULE_exp = 14, RULE_exp_logica = 15, 
		RULE_suma = 16, RULE_resta = 17, RULE_mul = 18, RULE_div = 19, RULE_menor = 20, 
		RULE_mayor = 21, RULE_menorigual = 22, RULE_mayorigual = 23, RULE_igual = 24, 
		RULE_noigual = 25, RULE_bit_and = 26, RULE_and = 27, RULE_bit_or = 28, 
		RULE_or = 29, RULE_funcion_id = 30, RULE_variable_id = 31, RULE_identificador = 32, 
		RULE_asignar = 33, RULE_a_parentesis = 34, RULE_c_parentesis = 35, RULE_coma = 36, 
		RULE_dospuntos = 37, RULE_puntoycoma = 38, RULE_saltolinea = 39, RULE_begin = 40, 
		RULE_end = 41, RULE_end_if = 42, RULE_include = 43, RULE_function = 44, 
		RULE_in = 45, RULE_if_ = 46, RULE_else_ = 47, RULE_while_ = 48, RULE_for_ = 49, 
		RULE_return_ = 50, RULE_string = 51, RULE_numero = 52, RULE_valor = 53, 
		RULE_r_string = 54, RULE_r_number = 55, RULE_r_void = 56, RULE_r_variable = 57, 
		RULE_retorno = 58;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "return_val", "while_op", "if_op", "else_op", "for_op", "for_eval", 
			"funcionalidad_basica", "asignacion", "libreria", "def_funcion", "def_variable", 
			"funcion", "expr", "exp", "exp_logica", "suma", "resta", "mul", "div", 
			"menor", "mayor", "menorigual", "mayorigual", "igual", "noigual", "bit_and", 
			"and", "bit_or", "or", "funcion_id", "variable_id", "identificador", 
			"asignar", "a_parentesis", "c_parentesis", "coma", "dospuntos", "puntoycoma", 
			"saltolinea", "begin", "end", "end_if", "include", "function", "in", 
			"if_", "else_", "while_", "for_", "return_", "string", "numero", "valor", 
			"r_string", "r_number", "r_void", "r_variable", "retorno"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, "':='", "'('", "')'", "','", "':'", "';'", null, 
			"'<'", "'>'", "'<='", "'>='", "'=='", "'!='", "'&'", "'&&'", "'|'", "'||'", 
			"'+'", "'-'", "'*'", "'/'", null, null, null, "'cadena'", "'numero'", 
			"'void'", "'include'", "'if'", "'while'", "'function'", "'begin'", "'end'", 
			"'endif'", "'devolver'", "'else'", "'for'", "'in'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "COMENTARIO_LINEA", "COMENTARIO_BLOQUE", "COMENTARIO_DOCUMENTACION", 
			"ASIGNAR", "A_PARENTESIS", "C_PARENTESIS", "COMA", "DOSPUNTOS", "PUNTOCOMA", 
			"SALTOLINEA", "MENOR", "MAYOR", "MENORIGUAL", "MAYORIGUAL", "IGUAL", 
			"NOIGUAL", "BIT_AND", "AND", "BIT_OR", "OR", "SUMA", "RESTA", "MUL", 
			"DIV", "INT", "FLOAT", "STRING", "R_STRING", "R_NUMBER", "R_VOID", "INCLUDE", 
			"IF", "WHILE", "FUNCTION", "BEGIN", "END", "END_IF", "RETURN", "ELSE", 
			"FOR", "IN", "IDENTIFICADOR", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "FiboParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public FiboParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramaContext extends ParserRuleContext {
		public List<SaltolineaContext> saltolinea() {
			return getRuleContexts(SaltolineaContext.class);
		}
		public SaltolineaContext saltolinea(int i) {
			return getRuleContext(SaltolineaContext.class,i);
		}
		public List<Def_variableContext> def_variable() {
			return getRuleContexts(Def_variableContext.class);
		}
		public Def_variableContext def_variable(int i) {
			return getRuleContext(Def_variableContext.class,i);
		}
		public List<Def_funcionContext> def_funcion() {
			return getRuleContexts(Def_funcionContext.class);
		}
		public Def_funcionContext def_funcion(int i) {
			return getRuleContext(Def_funcionContext.class,i);
		}
		public List<LibreriaContext> libreria() {
			return getRuleContexts(LibreriaContext.class);
		}
		public LibreriaContext libreria(int i) {
			return getRuleContext(LibreriaContext.class,i);
		}
		public List<AsignacionContext> asignacion() {
			return getRuleContexts(AsignacionContext.class);
		}
		public AsignacionContext asignacion(int i) {
			return getRuleContext(AsignacionContext.class,i);
		}
		public List<FuncionContext> funcion() {
			return getRuleContexts(FuncionContext.class);
		}
		public FuncionContext funcion(int i) {
			return getRuleContext(FuncionContext.class,i);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FiboParserListener ) ((FiboParserListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FiboParserListener ) ((FiboParserListener)listener).exitPrograma(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SALTOLINEA) | (1L << R_STRING) | (1L << R_NUMBER) | (1L << R_VOID) | (1L << INCLUDE) | (1L << FUNCTION) | (1L << IDENTIFICADOR))) != 0)) {
				{
				{
				setState(121);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==SALTOLINEA) {
					{
					{
					setState(118);
					saltolinea();
					}
					}
					setState(123);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(129);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
				case 1:
					{
					setState(124);
					def_variable();
					}
					break;
				case 2:
					{
					setState(125);
					def_funcion();
					}
					break;
				case 3:
					{
					setState(126);
					libreria();
					}
					break;
				case 4:
					{
					setState(127);
					asignacion();
					}
					break;
				case 5:
					{
					setState(128);
					funcion();
					}
					break;
				}
				setState(131);
				saltolinea();
				}
				}
				setState(137);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Return_valContext extends ParserRuleContext {
		public Return_Context return_() {
			return getRuleContext(Return_Context.class,0);
		}
		public A_parentesisContext a_parentesis() {
			return getRuleContext(A_parentesisContext.class,0);
		}
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public C_parentesisContext c_parentesis() {
			return getRuleContext(C_parentesisContext.class,0);
		}
		public PuntoycomaContext puntoycoma() {
			return getRuleContext(PuntoycomaContext.class,0);
		}
		public Return_valContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_return_val; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FiboParserListener ) ((FiboParserListener)listener).enterReturn_val(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FiboParserListener ) ((FiboParserListener)listener).exitReturn_val(this);
		}
	}

	public final Return_valContext return_val() throws RecognitionException {
		Return_valContext _localctx = new Return_valContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_return_val);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			return_();
			setState(139);
			a_parentesis();
			setState(140);
			exp(0);
			setState(141);
			c_parentesis();
			setState(142);
			puntoycoma();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class While_opContext extends ParserRuleContext {
		public While_Context while_() {
			return getRuleContext(While_Context.class,0);
		}
		public A_parentesisContext a_parentesis() {
			return getRuleContext(A_parentesisContext.class,0);
		}
		public Exp_logicaContext exp_logica() {
			return getRuleContext(Exp_logicaContext.class,0);
		}
		public C_parentesisContext c_parentesis() {
			return getRuleContext(C_parentesisContext.class,0);
		}
		public BeginContext begin() {
			return getRuleContext(BeginContext.class,0);
		}
		public EndContext end() {
			return getRuleContext(EndContext.class,0);
		}
		public List<SaltolineaContext> saltolinea() {
			return getRuleContexts(SaltolineaContext.class);
		}
		public SaltolineaContext saltolinea(int i) {
			return getRuleContext(SaltolineaContext.class,i);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<Def_variableContext> def_variable() {
			return getRuleContexts(Def_variableContext.class);
		}
		public Def_variableContext def_variable(int i) {
			return getRuleContext(Def_variableContext.class,i);
		}
		public List<AsignacionContext> asignacion() {
			return getRuleContexts(AsignacionContext.class);
		}
		public AsignacionContext asignacion(int i) {
			return getRuleContext(AsignacionContext.class,i);
		}
		public List<Funcionalidad_basicaContext> funcionalidad_basica() {
			return getRuleContexts(Funcionalidad_basicaContext.class);
		}
		public Funcionalidad_basicaContext funcionalidad_basica(int i) {
			return getRuleContext(Funcionalidad_basicaContext.class,i);
		}
		public While_opContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_while_op; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FiboParserListener ) ((FiboParserListener)listener).enterWhile_op(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FiboParserListener ) ((FiboParserListener)listener).exitWhile_op(this);
		}
	}

	public final While_opContext while_op() throws RecognitionException {
		While_opContext _localctx = new While_opContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_while_op);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			while_();
			setState(145);
			a_parentesis();
			setState(146);
			exp_logica();
			setState(147);
			c_parentesis();
			setState(151);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SALTOLINEA) {
				{
				{
				setState(148);
				saltolinea();
				}
				}
				setState(153);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(154);
			begin();
			setState(158);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(155);
					saltolinea();
					}
					} 
				}
				setState(160);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			setState(167);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << A_PARENTESIS) | (1L << INT) | (1L << FLOAT) | (1L << STRING) | (1L << R_STRING) | (1L << R_NUMBER) | (1L << R_VOID) | (1L << IF) | (1L << WHILE) | (1L << RETURN) | (1L << ELSE) | (1L << FOR) | (1L << IDENTIFICADOR))) != 0)) {
				{
				setState(165);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
				case 1:
					{
					setState(161);
					expr();
					}
					break;
				case 2:
					{
					setState(162);
					def_variable();
					}
					break;
				case 3:
					{
					setState(163);
					asignacion();
					}
					break;
				case 4:
					{
					setState(164);
					funcionalidad_basica();
					}
					break;
				}
				}
				setState(169);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(173);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SALTOLINEA) {
				{
				{
				setState(170);
				saltolinea();
				}
				}
				setState(175);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(176);
			end();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class If_opContext extends ParserRuleContext {
		public If_Context if_() {
			return getRuleContext(If_Context.class,0);
		}
		public A_parentesisContext a_parentesis() {
			return getRuleContext(A_parentesisContext.class,0);
		}
		public Exp_logicaContext exp_logica() {
			return getRuleContext(Exp_logicaContext.class,0);
		}
		public C_parentesisContext c_parentesis() {
			return getRuleContext(C_parentesisContext.class,0);
		}
		public End_ifContext end_if() {
			return getRuleContext(End_ifContext.class,0);
		}
		public List<SaltolineaContext> saltolinea() {
			return getRuleContexts(SaltolineaContext.class);
		}
		public SaltolineaContext saltolinea(int i) {
			return getRuleContext(SaltolineaContext.class,i);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<Def_variableContext> def_variable() {
			return getRuleContexts(Def_variableContext.class);
		}
		public Def_variableContext def_variable(int i) {
			return getRuleContext(Def_variableContext.class,i);
		}
		public List<AsignacionContext> asignacion() {
			return getRuleContexts(AsignacionContext.class);
		}
		public AsignacionContext asignacion(int i) {
			return getRuleContext(AsignacionContext.class,i);
		}
		public List<Funcionalidad_basicaContext> funcionalidad_basica() {
			return getRuleContexts(Funcionalidad_basicaContext.class);
		}
		public Funcionalidad_basicaContext funcionalidad_basica(int i) {
			return getRuleContext(Funcionalidad_basicaContext.class,i);
		}
		public If_opContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_if_op; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FiboParserListener ) ((FiboParserListener)listener).enterIf_op(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FiboParserListener ) ((FiboParserListener)listener).exitIf_op(this);
		}
	}

	public final If_opContext if_op() throws RecognitionException {
		If_opContext _localctx = new If_opContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_if_op);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(178);
			if_();
			setState(179);
			a_parentesis();
			setState(180);
			exp_logica();
			setState(181);
			c_parentesis();
			setState(185);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(182);
					saltolinea();
					}
					} 
				}
				setState(187);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			}
			setState(194);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << A_PARENTESIS) | (1L << INT) | (1L << FLOAT) | (1L << STRING) | (1L << R_STRING) | (1L << R_NUMBER) | (1L << R_VOID) | (1L << IF) | (1L << WHILE) | (1L << RETURN) | (1L << ELSE) | (1L << FOR) | (1L << IDENTIFICADOR))) != 0)) {
				{
				setState(192);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
				case 1:
					{
					setState(188);
					expr();
					}
					break;
				case 2:
					{
					setState(189);
					def_variable();
					}
					break;
				case 3:
					{
					setState(190);
					asignacion();
					}
					break;
				case 4:
					{
					setState(191);
					funcionalidad_basica();
					}
					break;
				}
				}
				setState(196);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(200);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SALTOLINEA) {
				{
				{
				setState(197);
				saltolinea();
				}
				}
				setState(202);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(203);
			end_if();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Else_opContext extends ParserRuleContext {
		public Else_Context else_() {
			return getRuleContext(Else_Context.class,0);
		}
		public End_ifContext end_if() {
			return getRuleContext(End_ifContext.class,0);
		}
		public List<SaltolineaContext> saltolinea() {
			return getRuleContexts(SaltolineaContext.class);
		}
		public SaltolineaContext saltolinea(int i) {
			return getRuleContext(SaltolineaContext.class,i);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<Def_variableContext> def_variable() {
			return getRuleContexts(Def_variableContext.class);
		}
		public Def_variableContext def_variable(int i) {
			return getRuleContext(Def_variableContext.class,i);
		}
		public List<AsignacionContext> asignacion() {
			return getRuleContexts(AsignacionContext.class);
		}
		public AsignacionContext asignacion(int i) {
			return getRuleContext(AsignacionContext.class,i);
		}
		public List<Funcionalidad_basicaContext> funcionalidad_basica() {
			return getRuleContexts(Funcionalidad_basicaContext.class);
		}
		public Funcionalidad_basicaContext funcionalidad_basica(int i) {
			return getRuleContext(Funcionalidad_basicaContext.class,i);
		}
		public Else_opContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_else_op; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FiboParserListener ) ((FiboParserListener)listener).enterElse_op(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FiboParserListener ) ((FiboParserListener)listener).exitElse_op(this);
		}
	}

	public final Else_opContext else_op() throws RecognitionException {
		Else_opContext _localctx = new Else_opContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_else_op);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(205);
			else_();
			setState(209);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(206);
					saltolinea();
					}
					} 
				}
				setState(211);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
			}
			setState(218);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << A_PARENTESIS) | (1L << INT) | (1L << FLOAT) | (1L << STRING) | (1L << R_STRING) | (1L << R_NUMBER) | (1L << R_VOID) | (1L << IF) | (1L << WHILE) | (1L << RETURN) | (1L << ELSE) | (1L << FOR) | (1L << IDENTIFICADOR))) != 0)) {
				{
				setState(216);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
				case 1:
					{
					setState(212);
					expr();
					}
					break;
				case 2:
					{
					setState(213);
					def_variable();
					}
					break;
				case 3:
					{
					setState(214);
					asignacion();
					}
					break;
				case 4:
					{
					setState(215);
					funcionalidad_basica();
					}
					break;
				}
				}
				setState(220);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(224);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SALTOLINEA) {
				{
				{
				setState(221);
				saltolinea();
				}
				}
				setState(226);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(227);
			end_if();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class For_opContext extends ParserRuleContext {
		public For_Context for_() {
			return getRuleContext(For_Context.class,0);
		}
		public A_parentesisContext a_parentesis() {
			return getRuleContext(A_parentesisContext.class,0);
		}
		public For_evalContext for_eval() {
			return getRuleContext(For_evalContext.class,0);
		}
		public C_parentesisContext c_parentesis() {
			return getRuleContext(C_parentesisContext.class,0);
		}
		public BeginContext begin() {
			return getRuleContext(BeginContext.class,0);
		}
		public EndContext end() {
			return getRuleContext(EndContext.class,0);
		}
		public List<SaltolineaContext> saltolinea() {
			return getRuleContexts(SaltolineaContext.class);
		}
		public SaltolineaContext saltolinea(int i) {
			return getRuleContext(SaltolineaContext.class,i);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<Def_variableContext> def_variable() {
			return getRuleContexts(Def_variableContext.class);
		}
		public Def_variableContext def_variable(int i) {
			return getRuleContext(Def_variableContext.class,i);
		}
		public List<AsignacionContext> asignacion() {
			return getRuleContexts(AsignacionContext.class);
		}
		public AsignacionContext asignacion(int i) {
			return getRuleContext(AsignacionContext.class,i);
		}
		public List<Funcionalidad_basicaContext> funcionalidad_basica() {
			return getRuleContexts(Funcionalidad_basicaContext.class);
		}
		public Funcionalidad_basicaContext funcionalidad_basica(int i) {
			return getRuleContext(Funcionalidad_basicaContext.class,i);
		}
		public For_opContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_for_op; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FiboParserListener ) ((FiboParserListener)listener).enterFor_op(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FiboParserListener ) ((FiboParserListener)listener).exitFor_op(this);
		}
	}

	public final For_opContext for_op() throws RecognitionException {
		For_opContext _localctx = new For_opContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_for_op);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(229);
			for_();
			setState(230);
			a_parentesis();
			setState(231);
			for_eval();
			setState(232);
			c_parentesis();
			setState(236);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SALTOLINEA) {
				{
				{
				setState(233);
				saltolinea();
				}
				}
				setState(238);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(239);
			begin();
			setState(243);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,17,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(240);
					saltolinea();
					}
					} 
				}
				setState(245);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,17,_ctx);
			}
			setState(252);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << A_PARENTESIS) | (1L << INT) | (1L << FLOAT) | (1L << STRING) | (1L << R_STRING) | (1L << R_NUMBER) | (1L << R_VOID) | (1L << IF) | (1L << WHILE) | (1L << RETURN) | (1L << ELSE) | (1L << FOR) | (1L << IDENTIFICADOR))) != 0)) {
				{
				setState(250);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,18,_ctx) ) {
				case 1:
					{
					setState(246);
					expr();
					}
					break;
				case 2:
					{
					setState(247);
					def_variable();
					}
					break;
				case 3:
					{
					setState(248);
					asignacion();
					}
					break;
				case 4:
					{
					setState(249);
					funcionalidad_basica();
					}
					break;
				}
				}
				setState(254);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(258);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SALTOLINEA) {
				{
				{
				setState(255);
				saltolinea();
				}
				}
				setState(260);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(261);
			end();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
